# FastapiTemplate

./: .dockerignore  .env  Dockerfile  __main__.py  conftest.py  docker-compose.dev.yml  docker-compose.yml  log.ini  main.py  pyproject.toml  pytest.ini  start_docker_compose.dev.sh  start_docker_compose.sh
src/: __init__.py  middleware.py  service.py  session.py
src/database/: __init__.py  database.py
src/exeptions/: base_exeption.py
tests/: __util.py
